# k-means

./: .gitignore  CMakeLists.txt  README.md  distance.c  distance.h  ioutils.c  ioutils.h  kmeans.c
